--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ black = "^24.4.2"
 ipython = "^8.24.0"
 pytils = "^0.4.1"
 django-crispy-forms = "^2.2"
+crispy-bootstrap5 = "^2024.2"
 
 
 [build-system]
