--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 psycopg2-binary = "^2.9.9"
-django = "^5.0.6"
+django = "4.2"
 pillow = "^10.3.0"
 black = "^24.4.2"
 ipython = "^8.24.0"
