--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ ipython = "^8.24.0"
 pytils = "^0.4.1"
 django-crispy-forms = "^2.2"
 crispy-bootstrap5 = "^2024.2"
+django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
 
 
 [build-system]
