--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ django-crispy-forms = "^2.2"
 crispy-bootstrap5 = "^2024.2"
 django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
 certifi = "^2024.6.2"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
