--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ crispy-bootstrap5 = "^2024.2"
 django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
 certifi = "^2024.6.2"
 python-dotenv = "^1.0.1"
+redis = "^5.0.7"
 
 
 [build-system]
